added links referencing sales and index html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
     </head>
     <body>
         <header>
-            <h1>Salmon Cookies</h1>
+            <h1>Salmon Cookies 🐟🥠</h1>
+            <nav>
+                <ul>
+                    <li>Menu</li>
+                    <li>Locations</li>
+                    <li>Hours</li>
+                    <li>Cart</li>
+                </ul>
+            </nav>
         </header>
         <main>
+            <img src="/imgs/salmon.png" alt="side view of salmon">
         </main>
         <footer>
-
+            <ul>
+                <li><a href="sales.html">Sales Ledger</a></li>
+            </ul>
         </footer>
-        <script src="js/app.js"></script>
+        <!-- <script src="js/app.js"></script> -->
     </body>
 </html>
