--- a/sales.html
+++ b/sales.html
@@ -19,12 +19,14 @@
                     <li></li>
                     <li></li>
 
-                </ul> -->
-            </section>
+                </ul>
+            </section> -->
 
         </main>
         <footer>
-
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
         </footer>
         <script src = "js/app.js"></script>
     </body>
