nav bar updates

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
     </head>
     <body>
         <header>
-            <h1>Salmon Cookies 🐟🥠</h1>
+            
             <nav>
                 <ul>
-                    <li>Menu</li>
-                    <li>Locations</li>
-                    <li>Hours</li>
-                    <li>Cart</li>
+                    <li>Salmon Cookies</li>
+                    <li><a>Menu</a></li>
+                    <li><a>Locations</a></li>
+                    <li><a>Hours</a></li>
+                    <li><a>Cart</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <img src="/imgs/salmon.png" alt="side view of salmon">
+            <h1>Salmon Cookies 🐟🥠</h1>
         </main>
         <footer>
             <ul>
