--- a/index.html
+++ b/index.html
@@ -9,20 +9,57 @@
     </head>
     <body>
         <header>
-            
             <nav>
-                <ul>
-                    <li>Salmon Cookies</li>
-                    <li><a>Menu</a></li>
-                    <li><a>Locations</a></li>
-                    <li><a>Hours</a></li>
-                    <li><a>Cart</a></li>
-                </ul>
+                <section>
+                    <ul>
+                        <li>Salmon Cookies</li>
+                        <li><a>Store</a></li>
+                        <li><a>Locations</a></li>
+                        <li><a>Hours</a></li>
+                        <li><a>Cart</a></li>
+                    </ul>
+                </section>
             </nav>
         </header>
         <main>
             <img src="/imgs/salmon.png" alt="side view of salmon">
             <h1>Salmon Cookies 🐟🥠</h1>
+            <section>
+                <h1>Our Story</h1>
+                <p>Jelly-o gummi bears wafer. Oat cake cupcake bonbon toffee. Jelly tiramisu gummi bears jelly beans dragée dragée cupcake fruitcake. Jelly beans pastry toffee halvah caramels. Jujubes chocolate cake croissant powder marshmallow lemon drops jujubes gingerbread gingerbread. Gummi bears macaroon ice cream jujubes gingerbread sesame snaps sweet tootsie roll. Toffee candy donut chupa chups sugar plum liquorice muffin tiramisu. Jujubes icing croissant sweet gummi bears jelly beans gummies liquorice. Sweet roll fruitcake candy gummies marshmallow. Sweet roll topping pastry oat cake chocolate cake. Oat cake jelly beans marshmallow jelly-o. Bear claw chocolate carrot cake chocolate cake marzipan pastry chocolate danish gummies. Sweet roll topping marshmallow.
+
+                </p>
+                <div>
+                    <img src="imgs/family.jpg" alt="family eating cookies">
+                </div>
+                <div>
+                    <img src="imgs/cutter.jpeg" alt="fish cookie cutter">
+                    <img src="imgs/frosted-cookie.jpg" alt="frosted salmon cookie">
+                </div>
+                <article>
+                    <p></p>
+                </article>
+            </section>
+            <section class="locations">
+                <h1>Locations</h1>
+                <div class="locrow1">
+                    <img src="imgs/seattle.png" alt="seattle on map">
+                    <img src="imgs/tokyo.png" alt="tokyo on map">
+                    <img src="imgs/dubai.png" alt="dubai on map">
+
+                </div>
+                <div class="locrow2">
+                    <img src="imgs/paris.png" alt="paris on map">
+                    <img src="imgs/lima.png" alt="lima on map">
+                </div>
+            </section>
+            <section>
+                <h1>Merch!</h1>
+                <div>
+                    <img src="imgs/shirt.jpg" alt="salmon t-shirt">
+                    <img src="imgs/fish.jpg" alt="fish art">
+                </div>
+            </section>
         </main>
         <footer>
             <ul>
