--- a/index.html
+++ b/index.html
@@ -43,17 +43,44 @@
             <section class="locations">
                 <h1>Locations</h1>
                 <div class="locrow1">
-                    <img src="imgs/seattle.png" alt="seattle on map">
-                    <img src="imgs/tokyo.png" alt="tokyo on map">
-                    <img src="imgs/dubai.png" alt="dubai on map">
+                    <div class = "locationbanner">
+                        <h2>Seattle</h2>
+                        <img src="imgs/seattle.png" alt="seattle on map">
+                        <p>123 Salmon Street</p>
+                        <p>Seattle, WA, USA</p>
+                    </div>
+                    <div class = "locationbanner">
+                        <h2>Tokyo</h2>
+                        <img src="imgs/tokyo.png" alt="tokyo on map">
+                        <p>123 Salmon Street</p>
+                        <p>Tokyo, Japan</p>
+                    </div>
+                    <div class = "locationbanner">
+                        <h2>Dubai</h2>
+                        <img src="imgs/dubai.png" alt="dubai on map">
+                        <p>123 Salmon Street</p>
+                        <p>Dubai, UAE</p>
+                    </div>
 
                 </div>
                 <div class="locrow2">
-                    <img src="imgs/paris.png" alt="paris on map">
-                    <img src="imgs/lima.png" alt="lima on map">
+                    <div class = "locationbanner">
+                        <h2>Paris</h2>
+                        <img src="imgs/paris.png" alt="paris on map">
+                        <p>123 Salmon Street</p>
+                        <p>Paris, France</p>
+                    </div>
+                    <div class = "locationbanner">
+                        <h2>Lima</h2>
+                        <img src="imgs/lima.png" alt="lima on map">
+                        <p>123 Salmon Street</p>
+                        <p>Lima, Peru</p>
+                    </div>
+                    
+                    
                 </div>
             </section>
-            <section>
+            <section class = "merch">
                 <h1>Merch!</h1>
                 <div>
                     <img src="imgs/shirt.jpg" alt="salmon t-shirt">
