merch banner, our story styling

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </nav>
         </header>
         <main>
+            <section class = "ourstory">
             <img src="/imgs/salmon.png" alt="side view of salmon">
             <h1>Salmon Cookies 🐟🥠</h1>
-            <section>
                 <h1>Our Story</h1>
                 <p>Jelly-o gummi bears wafer. Oat cake cupcake bonbon toffee. Jelly tiramisu gummi bears jelly beans dragée dragée cupcake fruitcake. Jelly beans pastry toffee halvah caramels. Jujubes chocolate cake croissant powder marshmallow lemon drops jujubes gingerbread gingerbread. Gummi bears macaroon ice cream jujubes gingerbread sesame snaps sweet tootsie roll. Toffee candy donut chupa chups sugar plum liquorice muffin tiramisu. Jujubes icing croissant sweet gummi bears jelly beans gummies liquorice. Sweet roll fruitcake candy gummies marshmallow. Sweet roll topping pastry oat cake chocolate cake. Oat cake jelly beans marshmallow jelly-o. Bear claw chocolate carrot cake chocolate cake marzipan pastry chocolate danish gummies. Sweet roll topping marshmallow.
 
@@ -41,25 +41,30 @@
                 </article>
             </section>
             <section class="locations">
-                <h1>Locations</h1>
+                <h1>Locations & Hours of Operation</h1>
                 <div class="locrow1">
                     <div class = "locationbanner">
                         <h2>Seattle</h2>
                         <img src="imgs/seattle.png" alt="seattle on map">
                         <p>123 Salmon Street</p>
                         <p>Seattle, WA, USA</p>
+                        <p>Hours: 6:00am - 8:00pm</p>
                     </div>
                     <div class = "locationbanner">
                         <h2>Tokyo</h2>
                         <img src="imgs/tokyo.png" alt="tokyo on map">
                         <p>123 Salmon Street</p>
                         <p>Tokyo, Japan</p>
+                        <p>Hours: 6:00am - 8:00pm</p>
+
                     </div>
                     <div class = "locationbanner">
                         <h2>Dubai</h2>
                         <img src="imgs/dubai.png" alt="dubai on map">
                         <p>123 Salmon Street</p>
                         <p>Dubai, UAE</p>
+                        <p>Hours: 6:00am - 8:00pm</p>
+
                     </div>
 
                 </div>
@@ -69,12 +74,16 @@
                         <img src="imgs/paris.png" alt="paris on map">
                         <p>123 Salmon Street</p>
                         <p>Paris, France</p>
+                        <p>Hours: 6:00am - 8:00pm</p>
+
                     </div>
                     <div class = "locationbanner">
                         <h2>Lima</h2>
                         <img src="imgs/lima.png" alt="lima on map">
                         <p>123 Salmon Street</p>
                         <p>Lima, Peru</p>
+                        <p>Hours: 6:00am - 8:00pm</p>
+
                     </div>
                     
                     
@@ -82,14 +91,22 @@
             </section>
             <section class = "merch">
                 <h1>Merch!</h1>
-                <div>
+                <div class = "merchbanner">
                     <img src="imgs/shirt.jpg" alt="salmon t-shirt">
+                    <p>T-shirt: $100</p>
+                </div>
+                <div class = "merchbanner">
                     <img src="imgs/fish.jpg" alt="fish art">
+                    <p>Fish Art: $5,000</p>
                 </div>
             </section>
         </main>
         <footer>
+            <img src="imgs/chinook.jpg" alt="chinook salmon">
             <ul>
+                <li>Contact Us!</li>
+                <li>☎️ (123) 456-7890 ☎️</li>
+                <li>📧 salmoncookies@fakeemail.com 📧</li>
                 <li><a href="sales.html">Sales Ledger</a></li>
             </ul>
         </footer>
