form data validation

--- a/sales.html
+++ b/sales.html
@@ -14,20 +14,20 @@
                 <legend>Test</legend>
                 <fieldset>
                     <label for="location">Location:</label>
-                    <input type="text" id="location" name = "location" >
+                    <input type="text" id="location" name = "location" required>
                 </fieldset>
                 <fieldset>
                     <legend>Expected Customer Traffic</legend>
                     <label for="min-cust-traffic">Min</label>
-                    <input type="number" min = "0" id="min-cust-traffic" name = "minCustTraffic">
+                    <input type="number" min = "0" id="min-cust-traffic" name = "minCustTraffic" required>
                 </fieldset>
                 <fieldset>
                     <label for="max-cust-traffic">Max</label>
-                    <input type="number" min = "0" id = "max-cust-traffic" name = "maxCustTraffic">
+                    <input type="number" min = "0" id = "max-cust-traffic" name = "maxCustTraffic" required>
                 </fieldset>
                 <fieldset>
                     <label for="avg-cust-sale">Average Sale/Customer</label>
-                    <input type="number" min = "0" id = "avg-cust-sale" name = "avgCustSale">
+                    <input type="number" min = "0" id = "avg-cust-sale" name = "avgCustSale" required>
                 </fieldset>
                 <button type="submit" id = "sub-btn">Submit</button>
             </form>
