--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <html>
     <head>
         <title>Salmon Cookies</title>
-        <link rel="stylesheet" href="/css/reset.css">
-        <link rel="stylesheet" href="/css/style.css">
-
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
