removed / to get salmon img to render

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
         <main>
             <section class = "ourstory">
-            <img src="/imgs/salmon.png" alt="side view of salmon">
+            <img src="imgs/salmon.png" alt="side view of salmon">
             <h1>Salmon Cookies 🐟🥠</h1>
                 <h1>Our Story</h1>
                 <p>Jelly-o gummi bears wafer. Oat cake cupcake bonbon toffee. Jelly tiramisu gummi bears jelly beans dragée dragée cupcake fruitcake. Jelly beans pastry toffee halvah caramels. Jujubes chocolate cake croissant powder marshmallow lemon drops jujubes gingerbread gingerbread. Gummi bears macaroon ice cream jujubes gingerbread sesame snaps sweet tootsie roll. Toffee candy donut chupa chups sugar plum liquorice muffin tiramisu. Jujubes icing croissant sweet gummi bears jelly beans gummies liquorice. Sweet roll fruitcake candy gummies marshmallow. Sweet roll topping pastry oat cake chocolate cake. Oat cake jelly beans marshmallow jelly-o. Bear claw chocolate carrot cake chocolate cake marzipan pastry chocolate danish gummies. Sweet roll topping marshmallow.
