final main page styling

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <header>
             <nav>
                 <section>
-                    <ul>
-                        <li>Salmon Cookies</li>
+                    <ul class = "flex">
+                        <img src="imgs/chinook.png" alt="chinook salmon">
+                        <li>Pats' Salmon Cookies</li>
                         <li><a>Store</a></li>
                         <li><a>Locations</a></li>
                         <li><a>Hours</a></li>
@@ -22,35 +23,52 @@
         </header>
         <main>
             <section class = "ourstory">
+            <h1>Pat's Salmon Cookies</h1>
+            <h3>Established: 2021</h3>
             <img src="imgs/salmon.png" alt="side view of salmon">
-            <h1>Salmon Cookies 🐟🥠</h1>
-                <h1>Our Story</h1>
-                <p>Jelly-o gummi bears wafer. Oat cake cupcake bonbon toffee. Jelly tiramisu gummi bears jelly beans dragée dragée cupcake fruitcake. Jelly beans pastry toffee halvah caramels. Jujubes chocolate cake croissant powder marshmallow lemon drops jujubes gingerbread gingerbread. Gummi bears macaroon ice cream jujubes gingerbread sesame snaps sweet tootsie roll. Toffee candy donut chupa chups sugar plum liquorice muffin tiramisu. Jujubes icing croissant sweet gummi bears jelly beans gummies liquorice. Sweet roll fruitcake candy gummies marshmallow. Sweet roll topping pastry oat cake chocolate cake. Oat cake jelly beans marshmallow jelly-o. Bear claw chocolate carrot cake chocolate cake marzipan pastry chocolate danish gummies. Sweet roll topping marshmallow.
+                <h2>Our Story</h2>
+                <p>Pat's Salmon Cookies was established in the fall of 2021. We strive to live the most accurate depiction of the great Pacific Northwest, and as many can attest to, there is nothing better than sitting inside on a rainy day, sipping your coffee, and snacking on a Pat's Salmon Cookie. A lot of people ask us at Pat's how this amazing combination was brought into exsistance. Well it all started when Pat stored their smoked salmon in the same container as their coffee cookies. Biting into the sweet cookie with that savory salmon taste blew Pat's mind, and they immediately knew they had a winner. Now Pat's has rapidly grown to five global locations and counting to bring the world this amazing combination at the highest quality! 
 
                 </p>
                 <div>
                     <img src="imgs/family.jpg" alt="family eating cookies">
                 </div>
-                <div>
-                    <img src="imgs/cutter.jpeg" alt="fish cookie cutter">
-                    <img src="imgs/frosted-cookie.jpg" alt="frosted salmon cookie">
-                </div>
+                <section id = "our-process">
+                    <h2>Our Process</h2>
+                    <article class = "flex">                
+                    <div class = "process">
+                        <h3>Fresh</h3>
+                        <img src="imgs/cookie-dough.jpeg" alt="cookie dough batter">
+                        <p>We use the freshest farm to table organic non GMO ingredients sourced locally in the PNW.</p>
+                    </div>
+                    <div class = "process">
+                        <h3>Fun</h3>
+                        <img src="imgs/cutter.jpeg" alt="fish cookie cutter">
+                        <p>Our proprietary cookie cutter shapes our cookies into fun salmons! </p>
+                    </div>
+                    <div class = "process">
+                        <h3>Delicious</h3>
+                        <img src="imgs/frosted-cookie.jpg" alt="frosted salmon cookie">
+                        <p>Sweet with a hint of savory salmon, these cookies will keep you coming back for more!</p>
+                    </div>
+                </article>
+                </section>
                 <article>
                     <p></p>
                 </article>
             </section>
             <section class="locations">
-                <h1>Locations & Hours of Operation</h1>
+                <h2>Locations & Hours of Operation</h2>
                 <div class="locrow1">
                     <div class = "locationbanner">
-                        <h2>Seattle</h2>
+                        <h3>Seattle</h3>
                         <img src="imgs/seattle.png" alt="seattle on map">
                         <p>123 Salmon Street</p>
                         <p>Seattle, WA, USA</p>
                         <p>Hours: 6:00am - 8:00pm</p>
                     </div>
                     <div class = "locationbanner">
-                        <h2>Tokyo</h2>
+                        <h3>Tokyo</h3>
                         <img src="imgs/tokyo.png" alt="tokyo on map">
                         <p>123 Salmon Street</p>
                         <p>Tokyo, Japan</p>
@@ -58,7 +76,7 @@
 
                     </div>
                     <div class = "locationbanner">
-                        <h2>Dubai</h2>
+                        <h3>Dubai</h3>
                         <img src="imgs/dubai.png" alt="dubai on map">
                         <p>123 Salmon Street</p>
                         <p>Dubai, UAE</p>
@@ -69,7 +87,7 @@
                 </div>
                 <div class="locrow2">
                     <div class = "locationbanner">
-                        <h2>Paris</h2>
+                        <h3>Paris</h3>
                         <img src="imgs/paris.png" alt="paris on map">
                         <p>123 Salmon Street</p>
                         <p>Paris, France</p>
@@ -77,7 +95,7 @@
 
                     </div>
                     <div class = "locationbanner">
-                        <h2>Lima</h2>
+                        <h3>Lima</h3>
                         <img src="imgs/lima.png" alt="lima on map">
                         <p>123 Salmon Street</p>
                         <p>Lima, Peru</p>
@@ -89,20 +107,21 @@
                 </div>
             </section>
             <section class = "merch">
-                <h1>Merch!</h1>
-                <div class = "merchbanner">
-                    <img src="imgs/shirt.jpg" alt="salmon t-shirt">
-                    <p>T-shirt: $100</p>
-                </div>
-                <div class = "merchbanner">
-                    <img src="imgs/fish.jpg" alt="fish art">
-                    <p>Fish Art: $5,000</p>
-                </div>
+                <h2>Support Pat's</h2>
+                <article class = "flex">
+                    <div class = "merchbanner">
+                        <img src="imgs/shirt.jpg" alt="salmon t-shirt">
+                        <p>T-shirt: $29.99</p>
+                    </div>
+                    <div class = "merchbanner">
+                        <img src="imgs/fish.jpg" alt="fish art">
+                        <p>Fish Art: $149.99</p>
+                    </div>
+                </article>
             </section>
         </main>
         <footer>
-            <img src="imgs/chinook.jpg" alt="chinook salmon">
-            <ul>
+            <ul class = "flex">
                 <li>Contact Us!</li>
                 <li>☎️ (123) 456-7890 ☎️</li>
                 <li>📧 salmoncookies@fakeemail.com 📧</li>
