final ledger styling

--- a/sales.html
+++ b/sales.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1>Salmon Cookies - Sales</h1>
+            <h1>Pat's Salmon Cookies - Sales Ledger</h1>
         </header>
         <main>
             <form id = "new-store-form" class = "flex">
